<resources>
    <string name="app_name">Assure</string>

    <string name="app_sub_name">ASSURED BOOKINGS, ASSURED STAYS.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="isRTL">false</string>

    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="play_more_app">https://play.google.com/store/apps/dev?id=7157478532572017100</string>

    <string name="facebook_app_id">1266664947438747</string>
    <string name="fb_login_protocol_scheme">fb1266664947438747</string>

    <string name="google_maps_key">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>

    <string name="home">Home</string>
    <string name="room">Rooms</string>
    <string name="location">Location</string>
    <string name="gallery">Gallery</string>
    <string name="facilities">Facilities</string>
    <string name="profile">Profile</string>
    <string name="my_booking">My Booking</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="refund_and_cancellation">Refund And Cancellation </string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">Faq</string>

    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading....</string>
    <string name="no_data_found">No data found</string>
    <string name="you_have_not_login">You Have Not Login</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="registration_success">Registration Successful. Verify Email</string>
    <string name="logout_message">are you sure you want to logout</string>
    <string name="storage_permission">Please allow storage permission</string>
    <string name="wrong">something went to wrong please try again later</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="upload_folder_error">Select from file manager then it will work</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>

    <string name="welcome_back">Welcome back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="button_text_login">LOGIN</string>
    <string name="skip">Skip</string>
    <string name="google_login">Gmail login</string>
    <string name="facebook_login">Facebook login</string>
    <string name="terms_title">I have read and agree to the</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="already_have_an_account_yet">Already have an account yet?</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="phoneNo">Phone No</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_not_match">Password and confirm password does not match</string>
    <string name="please_select_terms">Please select terms and condition option</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Forget password?</string>
    <string name="forget_password_text">Enter your email address below and we\'ll send you email with instructions on how to change your password</string>

    <string name="change_pass">Change password</string>
    <string name="change_password_pro">Change Password</string>
    <string name="remove_image">Remove Image</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_conform_password">New Conform Password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_new_confirm_password">Please enter new confirm password</string>
    <string name="new_password_not_match">New password and new confirm password does not match</string>

    <string name="user_not_facebook_link">User not add facebook link</string>
    <string name="user_not_whatsApp_link">User not add whatsapp link</string>
    <string name="user_not_twitter_link">User not add twitter link</string>
    <string name="user_not_instagram_link">User not add instagram link</string>
    <string name="user_not_youtube_link">User not add youtube link</string>
    <string name="user_not_web_link">User not add website link</string>

    <string name="pay_now">Pay Now</string>
    <string name="payathotel">Pay at Hotel</string>
    <string name="pay_advance">Pay Rs.200</string>
    <string name="room_rules">Room Rules</string>
    <string name="room_amenities">Room Amenities</string>
    <string name="reviews">Reviews</string>
    <string name="please_rate">Please rating</string>
    <string name="please_enter_review">Please enter review</string>
    <string name="no_review_found">No review found</string>

    <string name="facilities_detail">Facilities Detail</string>
    <string name="map_not_install">Google map not installed please install google map</string>

    <string name="departureDate">Departure Date</string>
    <string name="arrivalDate">Arrival Date</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="your_message">Your Message</string>
    <string name="please_select_adults">Please select adults</string>
    <string name="please_select_adults_children">Please select any one adult or children</string>
    <string name="please_select_children">Please select children</string>
    <string name="please_select_arrivalDate">Please select arrival date</string>
    <string name="please_select_departureDate">Please select departure date</string>
    <string name="please_select_first_arrivalDate">Please select first arrival date</string>

    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">1.0.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">xyz</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">xyz@xyz.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.xyz.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>

    <string name="theme">Theme</string>
    <string name="light">light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="Cancel_them">CANCEL</string>
    <string name="select_contact_subject">Select contact subject</string>
    <string name="please_select_subject">Please select subject</string>
    <string name="please_enter_message">please enter message</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="checkout_other_time_msg">The standard check-out time in Hotels is 11AM unless mentioned otherwise in your Booking . Late check-out is subject to availability and cannot be confirmed with the Hotel in advance. Extra charges will usually apply as per the Hotels</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>

    <!--<string name="cashfree_app_id">14497542d25e64e52bf55c9840579441</string>-->
    <string name="cashfree_app_id">2736026cbd7e59d17cf25e5adb206372</string>
</resources>
