<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_book_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:textStyle="bold"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/linearLayout_book_room"
        android:layout_below="@+id/toolbar_book_room"
        android:layout_margin="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_book_room"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_book_room"
        tools:layout_editor_absoluteX="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/layoutWhen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvWhen"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/spinner_all_bg"
                    android:gravity="center"
                    android:text="13 Jul 2022"
                    android:textColor="@color/textView_book_room"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tvWhere"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/spinner_all_bg"
                    android:gravity="center"
                    android:text="3:00 PM"
                    android:textColor="@color/textView_book_room"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@id/layoutWhen">

                <TextView
                    android:id="@+id/tv3H"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_book_time_selected"
                    android:gravity="center"
                    android:text="3 hours"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/tv6H"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_all_bg"
                    android:gravity="center"
                    android:text="6 hours"
                    android:textColor="@color/textView_book_room"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv12H"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_all_bg"
                    android:gravity="center"
                    android:text="12 hours"
                    android:textColor="@color/textView_book_room"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/layoutTime"
                android:background="@color/textView_book_room"/>

            <LinearLayout
                android:id="@+id/layoutCheckinoutDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/view1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="CHECK-IN"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="13 Jul 2022\n3:00PM"
                        android:textColor="@color/textView_book_room"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="CHECK-OUT"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="13 Jul 2022\n6:00PM"
                        android:textColor="@color/textView_book_room"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/layoutCheckinoutDetails"
                android:background="@color/textView_book_room"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_name_book_room"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_name_book_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/textView_editPro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_email_book_room"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_name_book_room">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_email_book_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/textView_editPro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_phoneNo_book_room"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phoneNo"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_email_book_room">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_phoneNo_book_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/textView_editPro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_adults_book_room"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/spinner_all_bg"
                android:paddingStart="0dp"
                android:paddingEnd="25dp"
                android:prompt="@string/app_name"
                app:layout_constraintEnd_toStartOf="@+id/spinner_children_book_room"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_phoneNo_book_room" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/down_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_adults_book_room"
                app:layout_constraintEnd_toEndOf="@+id/spinner_adults_book_room"
                app:layout_constraintTop_toTopOf="@+id/spinner_adults_book_room"
                app:tint="@color/image_color" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_children_book_room"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/spinner_all_bg"
                android:paddingStart="0dp"
                android:paddingEnd="25dp"
                android:prompt="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_adults_book_room"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinner_adults_book_room"
                app:layout_constraintTop_toTopOf="@+id/spinner_adults_book_room" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/down_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_children_book_room"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner_children_book_room"
                app:tint="@color/image_color" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_arrivalDate_booking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                android:background="@drawable/spinner_all_bg"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/arrivalDate"
                android:textColor="@color/textView_book_room"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView_departureDate_booking"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_adults_book_room" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_departureDate_booking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_all_bg"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:visibility="gone"
                android:text="@string/departureDate"
                android:textColor="@color/textView_book_room"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_arrivalDate_booking"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView_arrivalDate_booking"
                app:layout_constraintTop_toTopOf="@+id/textView_arrivalDate_booking" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_book_room"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="10dp"
                android:text="Pay Now"
                android:textColor="@color/white"
                app:backgroundTint="@color/button_bg"
                app:cornerRadius="5dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/btnPayAtHotel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_arrivalDate_booking"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPayAtHotel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="10dp"
                android:text="Pay At Hotel"
                android:textColor="@color/white"
                app:backgroundTint="@color/button_bg"
                app:cornerRadius="5dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_book_room"
                app:layout_constraintTop_toBottomOf="@+id/textView_arrivalDate_booking"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout_book_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>